--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -15,6 +15,14 @@
 	
 	<div class="container">
 		<section class="filters">
+			<div class="locations">
+				<h3>States</h3>
+				<h4>Lagos, Enugu...</h4>
+			</div>
+			<div class="amenities">
+				<h3>Amenities</h3>
+				<h4>Internet, Kitchen...</h4>
+			</div>
 			<button class="search">Search</button>
 		</section>
 	</div>
